--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "randomstring": "^1.3.0"
+    "randomstring": "^1.3.0",
+    "uuid": "^9.0.0"
   }
 }
