--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dagre": "^0.8.5",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "flowbite": "^1.8.1",
@@ -26,9 +27,11 @@
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
+    "react-dropzone-uploader": "^2.11.0",
+    "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "reactflow": "^11.7.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
