--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/reactflow/reactFlow.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(components)/app/[id]/reactFlow.tsx"],
   "exclude": ["node_modules"]
 }
