--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,11 @@
     "eslint-config-next": "13.4.12",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
+    "html2canvas": "^1.4.1",
     "js-token": "^1.0.0",
+    "jspdf": "^2.5.1",
     "loose-envify": "^1.4.0",
+    "moment": "^2.29.4",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "^18.2.0",
@@ -31,6 +34,7 @@
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-toastify": "^9.1.3",
     "reactflow": "^11.7.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
@@ -46,5 +50,8 @@
   "bugs": {
     "url": "https://github.com/mayurjadhav2002/yaml-visualize/issues"
   },
-  "homepage": "https://github.com/mayurjadhav2002/yaml-visualize#readme"
+  "homepage": "https://github.com/mayurjadhav2002/yaml-visualize#readme",
+  "devDependencies": {
+    "@types/dagre": "^0.7.49"
+  }
 }
