--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "randomstring": "^1.3.0",
+    "short-unique-id": "^4.4.4",
     "uuid": "^9.0.0"
   }
 }
