--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:3080
 NEXT_PUBLIC_IMAGE_URL=http://localhost:3080/static/avatar
+NEXT_PUBLIC_APP_URL=http://localhost:3000
