--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dagre": "^0.8.5",
+    "downloadjs": "^1.4.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "flowbite": "^1.8.1",
